# cidrcalc

./: Cargo.toml  README.md
src/: cidr.rs  main.rs
tests/: cli_tests.rs
